added permit upload page for Lynn
